compiler/testData/diagnostics/tests/deprecated/propertyWithInvoke.kt
// FIR_IDENTICAL
@Deprecated("No")
val f: () -> Unit = {}

fun test() {
    <!DEPRECATION!>f<!>()
}
